--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "df3d6e33",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
+      "CUDA backend loaded successfully.\n",
       "Available GPUs: 4\n",
       "Using GPU ID 2 : NVIDIA L40S\n"
      ]
@@ -25,7 +24,7 @@
     "import torch\n",
     "\n",
     "_avail_gpus = torch.cuda.device_count()\n",
-    "GPU_ID = 2\n",
+    "GPU_ID = 2  # Default GPU ID\n",
     "if _avail_gpus == 0:\n",
     "    print(\"No GPUs available -- will need one for cuda\")\n",
     "    device = \"cpu\"\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e402edd7",
    "metadata": {},
    "outputs": [
@@ -46,33 +45,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result:Hello from CUDA thread 0: 1.00 + 4.00 = 5.00\n",
-      "Hello from CUDA thread 1: 2.00 + 5.00 = 7.00\n",
-      "Hello from CUDA thread 2: 3.00 + 6.00 = 9.00\n",
-      " tensor([5., 7., 9.], device='cuda:1')\n"
+      "Result:Hello from CUDA thread 0: 0.01 + 0.63 = 0.64\n",
+      "Hello from CUDA thread 1: 0.46 + 0.17 = 0.63\n",
+      "Hello from CUDA thread 2: 0.69 + 0.63 = 1.32\n",
+      " tensor([0.6408, 0.6274, 1.3195], device='cuda:2')\n"
      ]
     }
    ],
    "source": [
-    "a = torch.tensor([1.0, 2.0, 3.0], device=GPU_ID)\n",
-    "b = torch.tensor([4.0, 5.0, 6.0], device=GPU_ID)\n",
-    "c = torch.tensor([0.0, 0.0, 0.0], device=GPU_ID)\n",
+    "a = torch.rand(3, device=GPU_ID)\n",
+    "b = torch.rand(3, device=GPU_ID)\n",
+    "c = torch.zeros_like(a, device=GPU_ID)\n",
     "radon.add_arrays(a, b, c)\n",
     "print(\"Result:\", c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a454181f",
+   "execution_count": 3,
+   "id": "f0cdbe47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radon object created: <radon.radon.Radon object at 0x746d476cf3b0>\n",
+      "Radon version: 0.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = radon.Radon()\n",
+    "print(\"Radon object created:\", r)\n",
+    "print(\"Radon version:\", r.version)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "radon",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
