Added cache manager

--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -45,10 +45,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result:Hello from CUDA thread 0: 0.01 + 0.63 = 0.64\n",
-      "Hello from CUDA thread 1: 0.46 + 0.17 = 0.63\n",
-      "Hello from CUDA thread 2: 0.69 + 0.63 = 1.32\n",
-      " tensor([0.6408, 0.6274, 1.3195], device='cuda:2')\n"
+      "Result: Hello from CUDA thread 0: 0.54 + 0.80 = 1.34\n",
+      "Hello from CUDA thread 1: 0.15 + 0.27 = 0.42\n",
+      "Hello from CUDA thread 2: 0.46 + 0.29 = 0.75\n",
+      "tensor([1.3384, 0.4153, 0.7496], device='cuda:2')\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radon object created: <radon.radon.Radon object at 0x746d476cf3b0>\n",
+      "Radon object created: <radon.radon.Radon object at 0x724b26cda2a0>\n",
       "Radon version: 0.1.0\n"
      ]
     }
