--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -45,10 +45,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result: Hello from CUDA thread 0: 0.54 + 0.80 = 1.34\n",
-      "Hello from CUDA thread 1: 0.15 + 0.27 = 0.42\n",
-      "Hello from CUDA thread 2: 0.46 + 0.29 = 0.75\n",
-      "tensor([1.3384, 0.4153, 0.7496], device='cuda:2')\n"
+      "Result: Hello from CUDA thread 0: 0.25 + 0.57 = 0.82\n",
+      "Hello from CUDA thread 1: 0.93 + 0.80 = 1.73\n",
+      "Hello from CUDA thread 2: 0.37 + 0.66 = 1.03\n",
+      "tensor([0.8228, 1.7291, 1.0334], device='cuda:2')\n"
      ]
     }
    ],
@@ -70,15 +70,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radon object created: <radon.radon.Radon object at 0x724b26cda2a0>\n",
-      "Radon version: 0.1.0\n"
+      "Radon object created: <radon.radon.Radon object at 0x76f63592be90>\n",
+      "Radon version: 0.1.0\n",
+      "Radon working successfully on device\n"
      ]
     }
    ],
    "source": [
     "r = radon.Radon()\n",
     "print(\"Radon object created:\", r)\n",
-    "print(\"Radon version:\", r.version)"
+    "print(\"Radon version:\", r.version)\n",
+    "print(\"Radon working successfully on device\")"
    ]
   }
  ],
