--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "df3d6e33",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA backend loaded successfully.\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Available GPUs: 4\n",
       "Using GPU ID 2 : NVIDIA L40S\n"
      ]
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e402edd7",
    "metadata": {},
    "outputs": [
@@ -45,10 +46,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result: Hello from CUDA thread 0: 0.25 + 0.57 = 0.82\n",
-      "Hello from CUDA thread 1: 0.93 + 0.80 = 1.73\n",
-      "Hello from CUDA thread 2: 0.37 + 0.66 = 1.03\n",
-      "tensor([0.8228, 1.7291, 1.0334], device='cuda:2')\n"
+      "Result: Hello from CUDA thread 0: 0.38 + 0.43 = 0.81\n",
+      "Hello from CUDA thread 1: 0.32 + 0.67 = 1.00\n",
+      "Hello from CUDA thread 2: 0.94 + 0.68 = 1.62\n",
+      "tensor([0.8126, 0.9976, 1.6229], device='cuda:2')\n"
      ]
     }
    ],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f0cdbe47",
    "metadata": {},
    "outputs": [
@@ -70,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radon object created: <radon.radon.Radon object at 0x76f63592be90>\n",
+      "Radon object created: <radon.radon.Radon object at 0x7a58e9a58200>\n",
       "Radon version: 0.1.0\n",
       "Radon working successfully on device\n"
      ]
