Added backprojection.cu. Also fixed issues with forward.cu

--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "df3d6e33",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
+      "CUDA backend loaded successfully.\n",
       "Available GPUs: 4\n",
       "Using GPU ID 2 : NVIDIA L40S\n"
      ]
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e402edd7",
    "metadata": {},
    "outputs": [
@@ -46,10 +45,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result: Hello from CUDA thread 0: 0.38 + 0.43 = 0.81\n",
-      "Hello from CUDA thread 1: 0.32 + 0.67 = 1.00\n",
-      "Hello from CUDA thread 2: 0.94 + 0.68 = 1.62\n",
-      "tensor([0.8126, 0.9976, 1.6229], device='cuda:2')\n"
+      "Result:Hello from CUDA thread 0: 0.70 + 0.64 = 1.35\n",
+      "Hello from CUDA thread 1: 0.73 + 0.65 = 1.37\n",
+      "Hello from CUDA thread 2: 0.84 + 0.90 = 1.74\n",
+      " tensor([1.3464, 1.3749, 1.7367], device='cuda:2')\n"
      ]
     }
    ],
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f0cdbe47",
    "metadata": {},
    "outputs": [
@@ -71,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radon object created: <radon.radon.Radon object at 0x7a58e9a58200>\n",
+      "Radon object created: <radon.radon.Radon object at 0x73f9b5d687a0>\n",
       "Radon version: 0.1.0\n",
       "Radon working successfully on device\n"
      ]
