Added Python functionality.

--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -10,24 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unable to import Radon class from radon module.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "Radon unavailable. Check Torch availability",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[0;32m~/code/radon/src/radon/__init__.py:8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# This seems necessary, as otherwise the cuda kernels cannot be loaded, but it feels like\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m# bad practice because now the entirity of torch is accessible from radon.radon.torch\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mradon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Radon\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/code/radon/src/radon/radon.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcuda\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RaysCfg\n\u001b[1;32m      4\u001b[0m __version__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.1.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'RaysCfg' from 'radon.cuda' (/home/darshanm/code/radon/src/radon/cuda/__init__.py)",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mload_ext\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mautoreload\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mautoreload\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mradon\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      7\u001b[0m _avail_gpus \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice_count()\n",
-      "File \u001b[0;32m~/code/radon/src/radon/__init__.py:11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnable to import Radon class from radon module.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRadon unavailable. Check Torch availability\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcuda_backend\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m add_arrays, subtract_arrays\n",
-      "\u001b[0;31mImportError\u001b[0m: Radon unavailable. Check Torch availability"
+      "CUDA backend loaded successfully.\n",
+      "RaysCfg loaded successfully.\n",
+      "Available GPUs: 4\n",
+      "Using GPU ID 2 : NVIDIA L40S\n"
      ]
     }
    ],
@@ -52,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e402edd7",
    "metadata": {},
    "outputs": [
@@ -60,10 +46,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result:Hello from CUDA thread 0: 0.59 + 0.49 = 1.07\n",
-      "Hello from CUDA thread 1: 0.03 + 0.51 = 0.55\n",
-      "Hello from CUDA thread 2: 0.50 + 0.54 = 1.04\n",
-      " tensor([1.0719, 0.5461, 1.0422], device='cuda:2')\n"
+      "Result: Hello from CUDA thread 0: 0.48 + 0.36 = 0.83\n",
+      "Hello from CUDA thread 1: 0.78 + 0.24 = 1.02\n",
+      "Hello from CUDA thread 2: 0.94 + 0.09 = 1.02\n",
+      "tensor([0.8344, 1.0192, 1.0228], device='cuda:2')\n"
      ]
     }
    ],
@@ -77,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0cdbe47",
    "metadata": {},
    "outputs": [
@@ -85,25 +71,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radon object created: <radon.radon.Radon object at 0x75b66c04e960>\n",
+      "Radon object created: <radon.radon.Radon object at 0x753661c93980>\n",
       "Radon version: 0.1.0\n",
       "Radon working successfully on device\n",
-      "RaysCfg object: <radon.cuda._cuda_add.RaysCfg object at 0x75b80f505770>\n"
+      "RaysCfg object: <radon.cuda._cuda_add.RaysCfg object at 0x753815b892b0>\n",
+      "TextureCache object: <radon.cuda._cuda_add.TextureCache object at 0x753661cf3830>\n"
      ]
     }
    ],
    "source": [
-    "r = radon.Radon()\n",
+    "r = radon.Radon(1,[0,10,20,30])\n",
     "print(\"Radon object created:\", r)\n",
     "print(\"Radon version:\", r.version)\n",
     "print(\"Radon working successfully on device\")\n",
-    "print(\"RaysCfg object:\", r.rays_cfg)"
+    "print(\"RaysCfg object:\", r.rays_cfg)\n",
+    "print(\"TextureCache object:\", r.tex_cache)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b2d787",
+   "id": "7631de47",
    "metadata": {},
    "outputs": [],
    "source": []
